--- a/sample-chart/templates/serviceaccount.yaml
+++ b/sample-chart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "helm-chart-test.serviceAccountName" . }}
+  name: {{ include "sample-chart.serviceAccountName" . }}
   labels:
-    {{- include "helm-chart-test.labels" . | nindent 4 }}
+    {{- include "sample-chart.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
