--- a/sample-chart/values.yaml
+++ b/sample-chart/values.yaml
@@ -1,4 +1,4 @@
-# Default values for helm-chart-test.
+# Default values for sample-chart.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
